--- a/local_rmd_nbooks/m2_integration_all.Rmd
+++ b/local_rmd_nbooks/m2_integration_all.Rmd
@@ -305,7 +305,7 @@ all_msc_w_strns_don %>% .[c("MSC33", "MSC57")] %>% imap(., ~.x@meta.data[, c("st
 #### Remove samples where it's hard to sort strains and doublets
 ```{r}
 # all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC38", "MSC39", "MSC55")]
-all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC38", "MSC39")]
+all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC37","MSC38", "MSC39")]
 ```
 
 #### Remove strain doublets and negatives
@@ -412,6 +412,11 @@ msc_w_cln_strns_raw <- map(msc_w_cln_strns, ~{
   
 })
 
+```
+
+```{r, fig.width=12, fig.height=4}
+# add stage metadata
+saveRDS(msc_w_cln_strns_raw, "data/processed/Pf/m2_all/msc_w_cln_strns_raw.RDS")
 ```
 
 Write out raw objects into .h5ad 
@@ -621,22 +626,23 @@ FeaturePlot(m2_seu_norm, features = "scf_class_norm_dbt_prop")
 gogo()
 ## Run harmony integration with 30 PCs and in the Seurat example
 
-# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "yes" --elbo_nm "harmony_int_elbo.RDS" --resume
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 8 --integrtd_pc_man "yes" --elbo_nm "harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
 ```
 
 ```{r, eval=T}
 gogo()
 ## Run harmony integration with the number of PCs being automatically detected by findPC
 
-# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int_PC_auto.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "harmony_int_PC_auto_elbo.RDS" --resume
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int_PC_auto.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "harmony_int_PC_auto_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
 ```
 
 
 
 ```{r}
-harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int.RDS")
-# harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int_PC_auto.RDS")
-
+# harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int.RDS")
+harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int_PC_auto.RDS")
+harmony_int_PC_auto_elbo <-  readRDS("data/processed/Pf/m2_all/harmony_int_PC_auto_elbo.RDS")
+harmony_int_PC_auto_elbo
 ```
 
 
@@ -657,10 +663,10 @@ DimPlot(harmony_int, reduction = "umap.harmony", group.by = "stage", label = F, 
 ```
 
 
-```{r, fig.width=6, fig.height=5}
+```{r}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-DimPlot(harmony_int, reduction = "umap.harmony", group.by = "orig.ident")
+DimPlot(harmony_int, reduction = "umap.harmony", group.by = "orig.ident", pt.size = 2)
 ```
 
 
@@ -669,7 +675,7 @@ DimPlot(harmony_int, reduction = "umap.harmony", group.by = "orig.ident")
 
 plot_ly(data = data.frame(harmony_int@reductions[["umap.harmony"]]@cell.embeddings),
         x = ~umapharmony_1, y = ~umapharmony_2, z = ~umapharmony_3,
-        color= harmony_int@meta.data$stage_c,
+        color= harmony_int@meta.data$donor,
         # colors = c('blue', 'red'),
         opacity = 0.8,
         size = 1, 
@@ -736,13 +742,16 @@ gogo()
 gogo()
 ## Run harmony integration with the number of PCs being automatically detected by findPC
 
-# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_asex_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "m2_asex_harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "m2_asex_harmony_int_elbo.RDS" --resume
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_asex_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "m2_asex_harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "m2_asex_harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+
+#"perpendicular line" is 6. kmeans which is 5 was giving very good umap
 ```
 
 
 ```{r}
 m2_asex_harmony_int <-  readRDS("data/processed/Pf/m2_all/m2_asex_harmony_int.RDS")
 m2_asex_harmony_int_elbo <-  readRDS("data/processed/Pf/m2_all/m2_asex_harmony_int_elbo.RDS")
+m2_asex_harmony_int_elbo
 ```
 
 ```{r}
@@ -750,7 +759,7 @@ DimPlot(m2_asex_harmony_int, group.by = "StagePrelim", pt.size = 0.4, reduction 
 ```
 
 ```{r}
-DimPlot(m2_asex_harmony_int, dims = c(1,2), group.by = "donor", pt.size = 0.8, reduction = "umap.harmony")
+DimPlot(m2_asex_harmony_int, dims = c(1,3), group.by = "donor", pt.size = 0.8, reduction = "umap.harmony")
 DimPlot(m2_asex_harmony_int, dims = c(2,3), group.by = "donor", pt.size = 0.4, reduction = "umap.harmony")
 ```
 
@@ -774,7 +783,7 @@ FeaturePlot(m2_asex_harmony_int, features = c("PF3D7_0831800", "PF3D7-1121600", 
 ```
 
 ```{r}
-DimPlot(m2_asex_harmony_int, reduction = "pca", group.by = "stage")
+DimPlot(m2_asex_harmony_int, reduction = "pca", group.by = "stage", pt.size = 1.5)
 ```
 
 
@@ -792,9 +801,10 @@ plot_ly(data = data.frame(m2_asex_harmony_int@reductions[["umap.harmony"]]@cell.
 DimPlot(m2_asex_harmony_int, pt.size = 0.4, reduction = "umap.harmony", group.by = "harmony_clusters")
 ```
 
+
 ```{r}
 ## 
-m2_asex_harmony_int <- FindClusters(m2_asex_harmony_int, resolution = 0.05, cluster.name = "harmony_clusters_ss")
+m2_asex_harmony_int <- FindClusters(m2_asex_harmony_int, resolution = 0.26, cluster.name = "harmony_clusters_ss")
 
 ```
 
@@ -802,6 +812,48 @@ m2_asex_harmony_int <- FindClusters(m2_asex_harmony_int, resolution = 0.05, clus
 DimPlot(m2_asex_harmony_int, pt.size = 0.4, reduction = "umap.harmony", group.by = "harmony_clusters_ss")
 ```
 
+
+```{r}
+Idents(m2_asex_harmony_int) <- "harmony_clusters_ss"
+```
+
+
+```{r}
+m2_asex_harmony_int_jnd <- JoinLayers(m2_asex_harmony_int)
+asx_devt_mrks <- FindAllMarkers(m2_asex_harmony_int_jnd)
+```
+
+
+```{r}
+top3_gns <- asx_devt_mrks %>% group_by(cluster) %>% arrange(p_val_adj, desc(avg_log2FC)) %>% slice_head(n = 3) %>% left_join(., Pf3D7_genes_plasmoDB[, c("gene_id", "Gene")], by = c("gene" = "gene_id"))
+top3_gns
+```
+
+
+```{r, fig.width=12, fig.height=12}
+top3_gns$Gene
+# acs7 - https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10151525/, https://journals.asm.org/doi/10.1128/spectrum.05014-22 https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000271
+# lsa3 - https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5380959/
+# PF3D7-0918100 - https://hal.inrae.fr/hal-03752215/file/2022_Swale_Sci-Transl-Med_MAA.pdf
+# PF3D7-1477500 - exported- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8365696/
+# PF3D7-0532600 - exported-  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9320996/
+# PF3D7-0114500 hyp10 - exported, clonaly variant -  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8406225/
+# PfD80 - https://www.biorxiv.org/content/10.1101/2024.03.19.585770v1.full
+
+  
+```
+
+
+```{r}
+top3_fc_gns <- asx_devt_mrks %>% group_by(cluster) %>% arrange(desc(avg_log2FC)) %>% slice_head(n = 3) %>% left_join(., Pf3D7_genes_plasmoDB[, c("gene_id", "Gene")], by = c("gene" = "gene_id"))
+top3_fc_gns
+```
+
+
+```{r, fig.width=12, fig.height=12}
+
+FeaturePlot(m2_asex_harmony_int, features = top3_gns$gene, pt.size = 0.01, reduction = "umap.harmony", ncol = 3, slot = "data")
+```
 
 ```{r, eval=T}
 Seurat_object <- JoinLayers(m2_asex_harmony_int)
@@ -889,11 +941,11 @@ m2_asex_rpca_int <-  readRDS("data/processed/Pf/m2_all/m2_asex_rpca_int.RDS")
 
 
 ```{r}
-DimPlot(m2_asex_rpca_int, group.by = "stage", pt.size = 0.4, reduction = "umap.rpca")
-DimPlot(m2_asex_rpca_int, dims = c(2,3), group.by = "stage", pt.size = 0.4, reduction = "umap.rpca")
+DimPlot(m2_asex_rpca_int, group.by = "StagePrelim", pt.size = 0.4, reduction = "umap.rpca")
+DimPlot(m2_asex_rpca_int, dims = c(2,3), group.by = "StagePrelim", pt.size = 0.4, reduction = "umap.rpca")
 ```
 
-```{r}
+```{r, eval=FALSE}
 DimPlot(m2_asex_rpca_int, dims = c(1,3), group.by = "donor", pt.size = 0.4, reduction = "umap.rpca")
 DimPlot(m2_asex_rpca_int, dims = c(2,3), group.by = "donor", pt.size = 0.4, reduction = "umap.rpca")
 ```
@@ -905,7 +957,7 @@ plot_ly(data = data.frame(m2_asex_rpca_int@reductions[["umap.rpca"]]@cell.embedd
 ```
 
 ```{r}
-DimPlot(m2_asex_harmony_int, reduction = "pca", group.by = "stage")
+DimPlot(m2_asex_harmony_int, reduction = "pca", group.by = "StagePrelim")
 ```
 
 
@@ -930,7 +982,7 @@ m2_asex_sct_rpca_int <-  readRDS("data/processed/Pf/m2_all/m2_asex_sct_rpca_int.
 
 
 ```{r, fig.width=14, fig.height=5}
-DimPlot(m2_asex_sct_rpca_int, pt.size = 0.4, reduction = "umap.rpca", group.by = c("rpca_clusters", "stage"), dims = c(2,3))
+DimPlot(m2_asex_sct_rpca_int, pt.size = 0.4, reduction = "umap.rpca", group.by = c("rpca_clusters", "StagePrelim"), dims = c(2,3))
 ```
 
 ## Re-intergrate only the asexuals and reumap
@@ -1098,18 +1150,23 @@ gogo()
 v3_m2_asex_seu_norm <-  readRDS("data/processed/Pf/m2_all/v3_m2_asex_seu_norm.RDS")
 ```
 
-```{r, fig.width=6, fig.height=5}
+```{r, fig.width=10, fig.height=5}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-DimPlot(v3_m2_asex_seu_norm, reduction = "umap.unintegrated", group.by = "stage_c", label = F, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
+DimPlot(v3_m2_asex_seu_norm, reduction = "umap.unintegrated", group.by = "StageFL_ND", label = F, dims = c(1,2), split.by = "dset") #+ scale_color_manual(values = sp_fld_colors)
 ```
 
 ```{r, fig.width=12, fig.height=4}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-DimPlot(v3_m2_asex_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "stage"), label = F)
+DimPlot(v3_m2_asex_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "StagePrelim"), label = F)
 ```
 
+
+```{r, fig.width=12, fig.height=12}
+
+FeaturePlot(v3_m2_asex_seu_norm, features = top3_gns$gene, pt.size = 0.01, reduction = "umap.unintegrated", ncol = 3, slot = "data")
+```
 
 !!!NB - FARM CODE - DONT DELETE
 ```{r, eval=T}
@@ -1123,12 +1180,13 @@ gogo()
 gogo()
 ## Run harmony integration with the number of PCs being automatically detected by findPC
 
-# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_asex_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "v3_m2_asex_harmony.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters_asex" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "v3_m2_asex_harmony_elbo.RDS" --resume
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_asex_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "v3_m2_asex_harmony.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters_asex" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "v3_m2_asex_harmony_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
 ```
 
 
 ```{r}
 v3_m2_asex_harmony <-  readRDS("data/processed/Pf/m2_all/v3_m2_asex_harmony.RDS")
+v3_m2_asex_harmony_elbo <-  readRDS("data/processed/Pf/m2_all/v3_m2_asex_harmony_elbo.RDS")
 ```
 
 
@@ -1157,7 +1215,10 @@ DimPlot(v3_m2_asex_harmony, reduction = "umap.harmony", group.by = "harmony_clus
 ```
 
 
+```{r, fig.width=12, fig.height=12}
 
+FeaturePlot(v3_m2_asex_harmony, features = top3_gns$gene, pt.size = 0.01, reduction = "umap.harmony", ncol = 3, slot = "data")
+```
 
 ```{r, fig.width=12, fig.height=4}
 # visualize by batch and cell type annotation
@@ -1262,6 +1323,532 @@ v3_m2_asex_harmony@meta.data %>% filter(str_detect(donor, "MSC")) %>% dplyr::cou
 # visualize by batch and cell type annotation
 m2_asex_harmony_tr <- v3_m2_asex_harmony[,v3_m2_asex_harmony@meta.data$dset == "Field"]
 ```
+
+######################### Start - Gametocytes integration ###################################
+
+```{r, eval=T}
+gogo()
+
+```
+
+
+
+#### Females
+```{r}
+## Subset females and remove donors with no asexuals
+msc_w_cln_strns_raw_f <- compact(map(msc_w_cln_strns_raw, possibly(~.x[,str_detect(.x@meta.data$stage_c, "Female")])))
+
+## Remove donors with less than 100 asexual parasites
+msc_w_cln_strns_raw_f <- msc_w_cln_strns_raw_f[unlist(map(msc_w_cln_strns_raw_f, ~dim(.x)[2] > 100))]
+
+```
+
+
+```{r}
+## Making list of objects and renaming before integrating
+map(msc_w_cln_strns_raw_f, ~table(.x@meta.data$stage_c))
+```
+
+```{r}
+## Making list of objects and renaming before integrating
+m2_f_list <- merge(x = msc_w_cln_strns_raw_f[[1]], y = msc_w_cln_strns_raw_f[2:length(msc_w_cln_strns_raw_f)], add.cell.ids = str_remove(names(msc_w_cln_strns_raw_f), "SC"))
+```
+
+#### Females and Males
+```{r}
+## Subset males and remove donors with no asexuals
+msc_w_cln_strns_raw_fm <- compact(map(msc_w_cln_strns_raw, possibly(~.x[,str_detect(.x@meta.data$stage_c, "ale")])))
+
+## Remove donors with less than 100 asexual parasites
+msc_w_cln_strns_raw_fm <- msc_w_cln_strns_raw_fm[unlist(map(msc_w_cln_strns_raw_fm, ~dim(.x)[2] > 100))]
+
+
+```
+
+```{r}
+## Making list of objects and renaming before integrating
+map(msc_w_cln_strns_raw_fm, ~table(.x@meta.data$stage_c))
+```
+
+```{r}
+## Making list of objects and renaming before integrating
+m2_fm_list <- merge(x = msc_w_cln_strns_raw_fm[[1]], y = msc_w_cln_strns_raw_fm[2:length(msc_w_cln_strns_raw_fm)], add.cell.ids = str_remove(names(msc_w_cln_strns_raw_fm), "SC"))
+```
+
+
+!!! NOTE - EXPORT LATE ONCE WE FIGURE WAY TO DO FOR MALE AND FEMALE AT THE SAME TIME TO MINIMIZE REPETITION
+Write out annotated MCA reference in .h5ad 
+```{r, message=FALSE, warning=FALSE, eval=F}
+##Change factor metadata to character as these are not handled properly when converting to h5ad
+m2_fm_list_raw <- m2_fm_list
+m2_fm_list_raw@meta.data <- m2_fm_list_raw@meta.data %>% mutate(across(where(is.factor), as.character))
+
+## !!!NB - NEEDS SORTING IN FUTURE UPGRADING TO SEURAT 5 RESULTED IN ERROR AS DESCRIBED https://github.com/mojaveazure/seurat-disk/issues/147#top
+m2_fm_list_raw[["RNA3"]] <- as(object = m2_fm_list_raw[["RNA"]], Class = "Assay")
+DefaultAssay(m2_fm_list_raw) <- "RNA3"
+m2_fm_list_raw[["RNA"]] <- NULL
+m2_fm_list_raw <- RenameAssays(object = m2_fm_list_raw, RNA3 = 'RNA')
+
+# SaveH5Seurat(m2_fm_list_raw, filename =  paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_fm_list_raw.h5Seurat"), overwrite = T)
+SaveH5Seurat(m2_fm_list_raw, filename =  paste0("data/processed/Pf/m2_all/m2_fm_list_raw.h5Seurat"), overwrite = T)
+
+# Convert(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_fm_list_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+Convert(paste0("data/processed/Pf/m2_all/m2_fm_list_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+
+```
+
+```{r, message=FALSE, warning=FALSE}
+## save for running stdseurat in farm
+saveRDS(m2_f_list, "data/processed/Pf/m2_all/m2_f_list.RDS")
+saveRDS(m2_fm_list, "data/processed/Pf/m2_all/m2_fm_list.RDS")
+
+```
+
+```{r, eval=T}
+gogo()
+## Run SNORM on farm like below
+## !!NB - reducing the number of hypervariable genes results in scattered and disjointed clusters. higher hvg number better
+## !!NB - remember to make dynamic so the output file names are automatically generated from the input file name
+
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_f_list.RDS" --o_file_name "m2_f_seu_norm.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap.unintegrated" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "m2_f_seu_norm_elbo.RDS" --resume
+
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_fm_list.RDS" --o_file_name "m2_fm_seu_norm.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap.unintegrated" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "m2_fm_seu_norm_elbo.RDS" --resume
+```
+
+
+```{r, eval=T}
+gogo()
+## Run harmony integration with the number of PCs being automatically detected by findPC
+## !!NB - remember to make dynamic so the output file names are automatically generated from the input file name
+
+
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_f_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "m2_f_harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "m2_f_harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_fm_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "m2_fm_harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "m2_fm_harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+```
+
+```{r}
+m2_f_harmony_int <-  readRDS("data/processed/Pf/m2_all/m2_f_harmony_int.RDS")
+m2_f_harmony_int_elbo <-  readRDS("data/processed/Pf/m2_all/m2_f_harmony_int_elbo.RDS")
+```
+
+```{r}
+m2_fm_harmony_int <-  readRDS("data/processed/Pf/m2_all/m2_fm_harmony_int.RDS")
+m2_fm_harmony_int_elbo <-  readRDS("data/processed/Pf/m2_all/m2_fm_harmony_int_elbo.RDS")
+```
+
+```{r}
+DimPlot(m2_f_harmony_int, group.by = "StagePrelim", pt.size = 1.5, reduction = "umap.harmony")
+DimPlot(m2_fm_harmony_int, group.by = "StagePrelim", pt.size = 1.5, reduction = "umap.harmony")
+
+```
+
+```{r}
+DimPlot(m2_fm_harmony_int, dims = c(1,2), group.by = "donor", pt.size = 1.5, reduction = "umap.harmony")
+DimPlot(m2_fm_harmony_int, dims = c(2,3), group.by = "donor", pt.size = 1.5, reduction = "umap.harmony")
+```
+
+
+```{r, fig.width=12, fig.height=4}
+FeaturePlot(m2_fm_harmony_int, features = c("PF3D7-0301800", "PF3D7-1002000", "PF3D7-0608800"), pt.size = 0.01, reduction = "umap.harmony", ncol = 3, slot = "data")
+```
+
+HRP2-PF3D7_0831800
+EXP1-PF3D7_1121600
+FIRA-PF3D7_0501400
+LDH-PF3D7_1324900
+SERA5-PF3D7_0207600
+KAHRP-PF3D7_0202000
+CRT-PF3D7_0709000
+MRP1-PF3D7_0112200
+MPC1- PF3D7_1340800
+```{r, fig.width=12, fig.height=12}
+
+FeaturePlot(m2_fm_harmony_int, features = c("PF3D7_0831800", "PF3D7-1121600", "PF3D7-0501400","PF3D7-1324900","PF3D7-0207600", "PF3D7-0202000","PF3D7-0709000","PF3D7-0112200","PF3D7-1340800"), pt.size = 0.01, reduction = "umap.harmony", ncol = 3, slot = "data")
+```
+
+```{r}
+DimPlot(m2_fm_harmony_int, reduction = "pca", group.by = "stage")
+```
+
+
+```{r, warning=FALSE, message=FALSE, eval=FALSE}
+# Display the combined datasets as an interactive 3D plot 
+plot_ly(data = data.frame(m2_fm_harmony_int@reductions[["umap.harmony"]]@cell.embeddings), x = ~umapharmony_1, y = ~umapharmony_2, z = ~umapharmony_3,  color= m2_fm_harmony_int@meta.data$stage, opacity = 0.8, size = 1,   type = 'scatter3d')
+
+```
+
+
+
+
+
+```{r}
+DimPlot(m2_fm_harmony_int, pt.size = 0.4, reduction = "umap.harmony", group.by = "harmony_clusters")
+```
+
+
+```{r}
+## 
+m2_fm_harmony_int <- FindClusters(m2_fm_harmony_int, resolution = 0.08, cluster.name = "harmony_clusters_ss")
+
+```
+
+```{r}
+DimPlot(m2_fm_harmony_int, pt.size = 0.4, reduction = "umap.harmony", group.by = "harmony_clusters_ss")
+```
+
+
+```{r}
+Idents(m2_fm_harmony_int) <- "harmony_clusters_ss"
+```
+
+
+```{r}
+m2_fm_harmony_int_jnd <- JoinLayers(m2_fm_harmony_int)
+asx_devt_mrks <- FindAllMarkers(m2_fm_harmony_int_jnd)
+```
+
+
+```{r}
+top3_gns <- asx_devt_mrks %>% filter(p_val_adj ==0) %>% group_by(cluster) %>% slice_max(order_by = avg_log2FC, n = 3) %>% left_join(., Pf3D7_genes_plasmoDB[, c("gene_id", "Gene")], by = c("gene" = "gene_id"))
+top3_gns
+```
+
+
+```{r, fig.width=12, fig.height=12}
+top3_gns$Gene
+# acs7 - https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10151525/, https://journals.asm.org/doi/10.1128/spectrum.05014-22 https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000271
+# lsa3 - https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5380959/
+# PF3D7-0918100 - https://hal.inrae.fr/hal-03752215/file/2022_Swale_Sci-Transl-Med_MAA.pdf
+# PF3D7-1477500 - exported- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8365696/
+# PF3D7-0532600 - exported-  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9320996/
+# PF3D7-0114500 hyp10 - exported, clonaly variant -  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8406225/
+# PfD80 - https://www.biorxiv.org/content/10.1101/2024.03.19.585770v1.full
+
+  
+```
+
+```{r, fig.width=12, fig.height=12}
+
+FeaturePlot(m2_fm_harmony_int, features = top3_gns$gene, pt.size = 0.01, reduction = "umap.harmony", ncol = 3, slot = "data")
+```
+
+```{r, eval=T}
+Seurat_object <- JoinLayers(m2_fm_harmony_int)
+
+## Convert seurat object to SCE
+sce_obj <- SingleCellExperiment(assays = list(counts = as(Seurat_object[["RNA"]]$counts, Class = "dgCMatrix")), colData = Seurat_object@meta.data)
+    
+# print(sce_obj)
+logcounts(sce_obj) <- log2((counts(sce_obj) + 1))
+normcounts(sce_obj) <- as(Seurat_object[["RNA"]]$data, Class = "dgCMatrix")
+rowData(sce_obj)$feature_symbol <- str_replace(rownames(sce_obj), "-", "_")
+reducedDims(sce_obj) <- SimpleList(PCA = Seurat_object@reductions[["pca"]]@cell.embeddings, UMAP = Seurat_object@reductions[["umap.harmony"]]@cell.embeddings)
+
+
+# print(sce_obj)
+print(colnames(colData(sce_obj)))
+
+## Convert seurat object to SCE
+sce_obj <- slingshot(sce_obj, 
+            clusterLabels = "harmony_clusters_ss", 
+            reducedDim = "PCA", 
+            start.clus = 0,
+            # end.clus = E_CLSTR,
+            shrink =1, 
+            stretch = 1,
+            allow.break = F)
+
+
+```
+
+```{r}
+m2_f_harmony_sce_ss <- sce_obj
+##Prepare slingshot dataset (SDS) object 
+m2_f_harmony_sce_ss_sds <- SlingshotDataSet(sce_obj)
+
+plot(reducedDims(m2_f_harmony_sce_ss)$UMAP[,1:2], col = brewer.pal(9,"Set1")[as.factor(m2_f_harmony_sce_ss$stage)], pch=16, asp = 0.7)
+lines(m2_f_harmony_sce_ss_sds, lwd=2, col="black",dims = 1:2)
+```
+
+
+```{r, results="asis"}
+
+umap_meta_df <- reducedDims(m2_f_harmony_sce_ss)$UMAP[,c(1,2,3)] %>% as.data.frame() %>%rownames_to_column("cell_bc") %>% left_join(., m2_f_harmony_sce_ss@colData[,c("stage", "slingPseudotime_1", "orig.ident")] %>% as.data.frame() %>% rownames_to_column("cell_bc"), by = "cell_bc")  #%>% 
+# mutate(across(strain_dset, ~factor(., levels = rev(strain_dset_lvls_don)))) %>% arrange(strain_dset
+
+# umap_meta_df <- reducedDims(m2_f_harmony_sce_ss)$UMAP[,c(1,2,3)] %>% as.data.frame() %>%rownames_to_column("cell_bc") %>% left_join(., m2_f_harmony_sce_ss@colData[,c("stage", "slingPseudotime_1", "slingPseudotime_2", "orig.ident")] %>% as.data.frame() %>% rownames_to_column("cell_bc"), by = "cell_bc")  #%>% 
+# # mutate(across(strain_dset, ~factor(., levels = rev(strain_dset_lvls_don)))) %>% arrange(strain_dset
+
+
+tm <- theme_classic()+
+  theme(axis.text=element_blank(), 
+        axis.title=element_blank(),
+        legend.text = element_text(size = 22) ,
+        legend.title = element_text(size = 24, face = "bold") )
+
+umap_meta_df %>% 
+  ggplot(aes(x = umapharmony_1, y =umapharmony_2, color = slingPseudotime_1)) + geom_point(size=0.5) + 
+  scale_color_distiller(name="Pseudotime", direction = 1, palette = "Blues") + 
+  tm
+
+umap_meta_df %>% 
+  ggplot(aes(x = umapharmony_2, y =umapharmony_3, color = slingPseudotime_1)) + geom_point(size=0.5) + 
+  scale_color_distiller(name="Pseudotime", direction = 1, palette = "Blues") + 
+  tm
+
+
+```
+
+
+
+```{r, eval=T}
+gogo()
+
+```
+
+######## Gametocytes Field + Lab integration ######
+
+####integrate field gams without LE plus mca gams - all msc objects included separately
+
+```{r}
+# MCA_V3_ref_gam <- EF_V3_ref[, EF_V3_ref@meta.data$stagenewx %in% c("gametocyte (developing)", "gametocyte (male)", "gametocyte (female)")]
+# MCA_V3_ref_gam <- EF_V3_ref[, EF_V3_ref@meta.data$Stagex %in% c("early stalk","late stalk", "branching", "early female", "late female", "early male", "late male")]
+EF_V3_ref_gam_cnts <- CreateSeuratObject(counts = EF_V3_ref[, EF_V3_ref@meta.data$Stagex %in% c("early stalk","late stalk", "branching", "early female", "late female", "early male", "late male")][["RNA"]]$counts, meta.data = EF_V3_ref[, EF_V3_ref@meta.data$Stagex %in% c("early stalk","late stalk", "branching", "early female", "late female", "early male", "late male")]@meta.data)
+
+
+# msc_y21_gams <-map(msc_list, ~.x[, !.x@meta.data$stageHL %in% c("Early trophozoite", "Late ring")])
+# msc_gam_list_noLE<-map(msc_w_cln_strns, ~subset(.x, !(subset = stageHL %in% c("Early trophozoite", "Late ring", "Female (LE)", "Male (LE)"))))
+
+
+
+# DimPlot(EF_V3_ref_gam_cnts, group.by = "orig.ident", dims = c(1,3))
+# map(msc_gam_list_noLE, ~DimPlot(., group.by = c("stageHL")))
+```
+
+#### Females and Males without LE
+```{r}
+## Subset males and remove donors with no asexuals
+msc_w_cln_strns_raw_fm_noLE <- compact(map(msc_w_cln_strns_raw, possibly(~.x[,.x@meta.data$stage_c %in% c("Female","Male")])))
+
+## Remove donors with less than 100 asexual parasites
+msc_w_cln_strns_raw_fm_noLE <- msc_w_cln_strns_raw_fm_noLE[unlist(map(msc_w_cln_strns_raw_fm_noLE, ~dim(.x)[2] > 100))]
+
+```
+
+
+```{r}
+## Making list of objects and renaming before integrating
+map(msc_w_cln_strns_raw_fm_noLE, ~table(.x@meta.data$stage_c))
+```
+
+```{r}
+## Making list of objects and renaming before integrating
+# v3_m2_list_fm <- merge(x = EF_V3_ref_gam_cnts, y = msc_w_cln_strns_raw_fm, add.cell.ids = c("Lab", str_remove(names(msc_w_cln_strns_raw_fm), "SC")))
+v3_m2_list_fm <- merge(x = EF_V3_ref_gam_cnts, y = msc_w_cln_strns_raw_fm_noLE, add.cell.ids = c("Lab", str_remove(names(msc_w_cln_strns_raw_fm_noLE), "SC")))
+
+```
+
+
+```{r, fig.width=12, fig.height=4}
+# add stage metadata
+v3_m2_list_fm <- v3_m2_list_fm@meta.data %>% 
+  rownames_to_column('bcode') %>%
+  mutate(dset_labmrg = if_else(str_detect(orig.ident, "MSC"),  str_remove(orig.ident, ".mrna"), "Lab"),
+         StageFL = coalesce(stagenewx, stage),
+         StageFL_ND = str_to_sentence(StageFL),
+         dset = if_else(str_detect(orig.ident, "MSC"),  "Field", "Lab")
+         ) %>%
+  select(bcode, dset_labmrg, StageFL, StageFL_ND, dset) %>%
+  column_to_rownames('bcode') %>% 
+  AddMetaData(v3_m2_list_fm,.)
+
+
+```
+
+```{r, message=FALSE, warning=FALSE}
+## save for running stdseurat in farm
+saveRDS(v3_m2_list_fm, "data/processed/Pf/m2_all/v3_m2_list_fm.RDS")
+
+```
+
+
+Write out annotated asexual lab+field in .h5ad 
+```{r, message=FALSE, warning=FALSE, eval=T}
+##Change factor metadata to character as these are not handled properly when converting to h5ad
+v3_m2_list_fm_raw <- v3_m2_list_fm
+v3_m2_list_fm_raw@meta.data <- v3_m2_list_fm_raw@meta.data %>% mutate(across(where(is.factor), as.character))
+
+## !!!NB - NEEDS SORTING IN FUTURE UPGRADING TO SEURAT 5 RESULTED IN ERROR AS DESCRIBED https://github.com/mojaveazure/seurat-disk/issues/147#top
+v3_m2_list_fm_raw[["RNA3"]] <- as(object = v3_m2_list_fm_raw[["RNA"]], Class = "Assay")
+DefaultAssay(v3_m2_list_fm_raw) <- "RNA3"
+v3_m2_list_fm_raw[["RNA"]] <- NULL
+v3_m2_list_fm_raw <- RenameAssays(object = v3_m2_list_fm_raw, RNA3 = 'RNA')
+
+# SaveH5Seurat(v3_m2_list_fm_raw, filename =  paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/v3_m2_list_fm_raw.h5Seurat"), overwrite = T)
+SaveH5Seurat(v3_m2_list_fm_raw, filename =  paste0("data/processed/Pf/m2_all/v3_m2_list_fm_raw.h5Seurat"), overwrite = T)
+
+# Convert(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/v3_m2_list_fm_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+Convert(paste0("data/processed/Pf/m2_all/v3_m2_list_fm_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+
+```
+
+!!!NB - FARM CODE - DONT DELETE
+
+```{r, eval=T}
+gogo()
+## Run SNORM on farm like below
+## !!NB - reducing the number of hypervariable genes results in scattered and disjointed clusters. higher hvg number better
+
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_list_fm.RDS" --o_file_name "v3_m2_fm_seu_norm.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap.unintegrated" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "v3_m2_fm_seu_norm_elbo.RDS" --resume
+```
+
+
+```{r}
+v3_m2_fm_seu_norm <-  readRDS("data/processed/Pf/m2_all/v3_m2_fm_seu_norm.RDS")
+```
+
+```{r, fig.width=6, fig.height=5}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_seu_norm, reduction = "umap.unintegrated", group.by = "StageFL", label = F, dims = c(1,2)) #+ scale_color_manual(values = sp_fld_colors)
+```
+
+```{r, fig.width=6, fig.height=5}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_seu_norm, reduction = "pca", group.by = "StageFL_ND", label = F, pt.size = 3, dims = c(2,3)) 
+DimPlot(v3_m2_fm_seu_norm, reduction = "pca", group.by = "StageFL_ND", label = F, pt.size = 3, dims = c(1,3)) 
+DimPlot(v3_m2_fm_seu_norm, reduction = "pca", group.by = "StageFL_ND", label = F, pt.size = 3, dims = c(1,2)) 
+```
+
+
+```{r, fig.width=6, fig.height=5}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_seu_norm, reduction = "pca", group.by = "seurat_clusters", label = F, pt.size = 3, dims = c(1,2)) 
+DimPlot(v3_m2_fm_seu_norm, reduction = "pca",  label = F, pt.size = 2, dims = c(1,2), cells.highlight = colnames(v3_m2_fm_seu_norm[,v3_m2_fm_seu_norm@meta.data$seurat_clusters == "23"]), sizes.highlight = 3) 
+```
+
+
+```{r, fig.width=6, fig.height=5}
+v3_m2_fm_seu_norm@meta.data %>% filter(seurat_clusters == "23") %>% count(donor)
+```
+
+```{r, fig.width=6, fig.height=5}
+# v3_m2_fm_seu_norm@meta.data %>% filter(donor == "MSC37") %>% count(seurat_clusters)
+```
+
+```{r, fig.width=12, fig.height=4}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "StagePrelim"), label = F)
+```
+
+
+```{r, fig.width=12, fig.height=4}
+
+FeaturePlot(v3_m2_fm_seu_norm, features = c("PF3D7-0406200", "PF3D7-1469900", "PF3D7-0903800"), pt.size = 3, reduction = "pca", ncol = 4, slot = "data")
+```
+
+```{r, fig.width=12, fig.height=4}
+
+FeaturePlot(v3_m2_fm_seu_norm, features = c("scf_score_norm", "scf_score_supx_stg", "scf_score_rand"), pt.size = 3, reduction = "pca", ncol = 3, slot = "data")
+```
+```{r, fig.width=12, fig.height=4}
+
+FeaturePlot(v3_m2_fm_seu_norm, features = c("scf_class_norm_dbt_prop", "scf_class_stg_dbt_prop", "scf_class_rand_dbt_prop"), pt.size = 3, reduction = "pca", ncol = 3, slot = "data")
+```
+
+```{r, warning=FALSE, message=FALSE, eval=FALSE}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(v3_m2_fm_seu_norm@reductions[["pca"]]@cell.embeddings),
+        x = ~PC_1, y = ~PC_2, z = ~PC_3,
+        color= v3_m2_fm_seu_norm@meta.data$scf_class_rand_dbt_prop,
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 1, 
+        type = 'scatter3d'
+)
+
+```
+
+!!!NB - FARM CODE - DONT DELETE
+
+```{r, eval=T}
+gogo()
+## Run harmony integration with the number of PCs being automatically detected by findPC
+
+# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_fm_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "v3_m2_fm_harmony.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters_fm" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 3 --integrtd_pc_man "yes" --elbo_nm "v3_m2_fm_harmony_elbo.RDS" --findpc_mthd "perpendicular line" -resume
+
+```
+
+```{r, eval=F}
+gogo()
+## Run SNORM on farm like below
+# nextflow run submsn_intgrtn.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_fm_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "v3_m2_fm_harmony.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters_fm" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --resume
+```
+
+
+
+
+```{r}
+v3_m2_fm_harmony <-  readRDS("data/processed/Pf/m2_all/v3_m2_fm_harmony.RDS")
+v3_m2_fm_harmony_elbo <-  readRDS("data/processed/Pf/m2_all/v3_m2_fm_harmony_elbo.RDS")
+v3_m2_fm_harmony_elbo
+```
+
+
+```{r}
+# v3_m2_fm_harmony <- JoinLayers(v3_m2_fm_harmony)
+```
+
+
+```{r, fig.width=6, fig.height=5}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "umap.harmony", group.by = "StageFL", label = F, dims = c(1,2)) #+ scale_color_manual(values = sp_fld_colors)
+```
+
+```{r, fig.width=12, fig.height=4}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "umap.harmony", group.by = c("orig.ident", "stage"), label = F)
+```
+
+
+```{r, fig.width=6, fig.height=5}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "umap.harmony", group.by = "harmony_clusters_fm", label = T, dims = c(1,2))
+```
+```{r, fig.width=12, fig.height=4}
+
+FeaturePlot(v3_m2_fm_harmony, features = c("PF3D7-0406200", "PF3D7-1469900", "PF3D7-0903800"), pt.size = 1, reduction = "pca", ncol = 3, slot = "data")
+```
+
+
+```{r, fig.width=12, fig.height=4}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "umap.harmony", group.by = c("StageFL"), label = F)
+```
+
+```{r, fig.width=12, fig.height=4}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "pca", group.by = c("StageFL"), label = F)
+```
+
+```{r, fig.width=12, fig.height=4}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+DimPlot(v3_m2_fm_harmony, reduction = "pca", group.by = c("dset"), label = F)
+```
+
+
+########################## End - Gametocytes integration ###################################
 
 ```{r, fig.width=15, fig.height=5}
 # visualize by batch and cell type annotation
